# ioc_cleanup

./: .gitignore  Makefile  README.md  pyproject.toml  zensical.toml
.github/workflows/: docs.yml  run_tests.yml
dashboard/: cleanup_dashboard.py
docs/: 404.html  cleaned_map.html  concept.md  example.html  example_clean.html  guidelines.md  index.html  index.md  limitations.md  search.json  spikes.html  step_long.html  step_simple.html  tsunami_map.html  unknown.html
docs/assets/stylesheets/classic/: main.70d17ad7.min.css
docs/contributing/: index.html
docs/guidelines/: index.html
docs/reference/: json-schema.md
docs/reference/data-layout/: index.html
docs/reference/json-schema/: index.html
docs/reference/python-api/: index.html
docs/workflows/: dashboard.md
docs/workflows/dashboard/: index.html
docs_/: cleaned_map.html  contributing.md  guidelines.md  index.md  noise.html  seiche.html  tsunami.html
docs_/reference/: data-layout.md  python-api.md
ioc_cleanup/: __init__.py  _constants.py  _models.py  _plots.py  _searvey.py  _statistics.py  _tools.py
requirements/: requirements-dev.txt  requirements.txt
scripts/: download_ioc.py  generate_maps.py  save_cleaning_scenarios.py
site/: search.json  tsunami_detided.html
site/assets/stylesheets/modern/: main.f1b6466b.min.css
site/concept/: index.html
site/limitations/: index.html
site/reference/python-api/: index.html
site/workflows/dashboard/: index.html
tests/: ioc_cleanup_test.py
transformations/: AN15_rad.json  AZ42_rad.json  BA05_rad.json  CA02_rad.json  CETR_pr1.json  CF06_rad.json  CI20_rad.json  CR08_rad.json  CT03_rad.json  GA37_rad.json  GE25_rad.json  GI20_prs.json  IT45_rad.json  LA23_rad.json  LA38_rad.json  LI11_rad.json  MC41_rad.json  ME13_rad.json  Male2_prs.json  NA23_rad.json  OR24_rad.json  OT15_rad.json  PA07_rad.json  PE09_prs.json  PL14_rad.json  PO40_rad.json  PT17_rad.json  RA10_rad.json  RC09_rad.json  SA16_rad.json  SC43_rad.json  TR22_rad.json  VE19_rad.json  VI12_rad.json  abas_rad.json  abed_bub.json  abur_rad.json  acaj_rad.json  acap2_rad.json  acnj_wls.json  (+405 more)
